--- a/env/requirements.yaml
+++ b/env/requirements.yaml
@@ -7,3 +7,6 @@ dependencies:
   name: exposecontroller
   repository: http://chartmuseum.jenkins-x.io
   version: 2.3.89
+- name: voting-app-vote-python
+  repository: http://jenkins-x-chartmuseum:8080
+  version: v0.0.1
