--- a/env/requirements.yaml
+++ b/env/requirements.yaml
@@ -13,3 +13,6 @@ dependencies:
 - name: voting-app-vote-python
   repository: http://jenkins-x-chartmuseum:8080
   version: v0.0.1
+- name: voting-app-worker-java-2stateful
+  repository: http://jenkins-x-chartmuseum:8080
+  version: v1.0.1
